--- a/mojewebovky.html
+++ b/mojewebovky.html
@@ -1,12 +1,12 @@
 
 <html>
     <h1>
-        Hey, I'm NetworkChuck
+        Čau, jsem Metoděj aka. metyx11
     </h1>
     <body>
-        <h2>About me</h2>
+        <h2>Něco o mně</h2>
         <p>
-            I am a coffee addict who makes vidoes sometimes.
+            Jsem prostě <a href="https://www.youtube-nocookie.com/embed/FmZozjJ-aEc?playlist=FmZozjJ-aEc&autoplay=1&iv_load_policy=3&loop=1&start=">"závislák"</a> na videohrách...
         </p>
         <h2>What I'm working on</h2>
         <p>
